# torrent-models

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: benchmark.yml  docs-preview.yml  lint.yml  test.yml
docs/: beps.md  changelog.md  conf.py  index.md  tentacoli-1977-ost.torrent
docs/api/: create.md  hashing.md  info.md  libtorrent.md  torrent.md  types.md
docs/usage/: cli.md  torrent.md  validation.md
scripts/: generate_test_data.py  validate_corpus.py
src/torrent_models/: __init__.py  compat.py  const.py  create.py  info.py  junkdrawer.py  libtorrent.py  torrent.py  types.py  v2.py
src/torrent_models/cli/: main.py
src/torrent_models/hashing/: base.py  hasher.py  hybrid.py  v1.py  v2.py
src/torrent_models/testing/: fabricators.py
src/torrent_models/types/: __init__.py  common.py  v1.py  v2.py  validation.py
src/torrent_pyd/: __init__.py  torrent.py  types.py
src/torrent_pydantic/: __init__.py  const.py  info.py  junkdrawer.py  torrent.py  types.py  v1.py  v2.py
src/torrent_pydantic/cli/: __init__.py  main.py
stubs/: libtorrent.pyi
tests/: bench.py  conftest.py  test_create.py  test_placeholder.py  test_torrent.py  test_v2.py  test_validation.py
tests/data/: qbt_basic_hybrid.torrent  qbt_basic_v1.torrent
tests/fixtures/: libtorrent.py
